--- a/Daily notes/2024/09-Sep/2024-09-11.md
+++ b/Daily notes/2024/09-Sep/2024-09-11.md
@@ -10,7 +10,7 @@ print("Hello world")
 
 1. Clone repo locally
 ```
-git clone ...
+git clone https://github.com/guenp/obsidian-template
 ```
 2. Open vault
 3. Create a new note
